--- a/mobile/FridgyNote/app/src/main/res/values/strings.xml
+++ b/mobile/FridgyNote/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
+    <string name="title_shopping_item">Shopping Item</string>
+    <string name="title_reminders">Reminders</string>
     <string name="title_notifications">Notifications</string>
     <string name="tag_id">Tag ID:</string>
     <string name="defaulttagidtext">tag_id</string>
