--- a/mobile/FridgyNote/app/src/main/res/values/strings.xml
+++ b/mobile/FridgyNote/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="title">Title:</string>
     <string name="tag_title">Tag Title</string>
     <string name="type">Type:</string>
+    <string name="dialog_add">Add new note</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
