--- a/mobile/FridgyNote/app/src/main/res/values/strings.xml
+++ b/mobile/FridgyNote/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="dialog_add">Add new note</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu_delete">Delete</string>
 
     <string-array name="tag_types">
         <item>Notes</item>
